<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_pengirim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:backgroundTint="@color/primary"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:hint="Nama Pengirim"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_user_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_penerima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:backgroundTint="@color/primary"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="0dp"
                android:hint="Nama Penerima"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_user_24">
<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:inputType="text"/>-->
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteNamaPenerima"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_kota_pengirim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:backgroundTint="@color/primary"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="0dp"
                android:hint="Kota Pengirim"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_city">
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteKotaPengirim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:id="@+id/input_kota_penerima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="0dp"
                android:hint="Kota Penerima"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_city">
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteKotaPenerima"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_isiKiriman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:focusable="false"
                android:clickable="true"
                android:backgroundTint="@color/primary"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="0dp"
                android:hint="Isi Kiriman"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_box">
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteIsiKiriman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_alamatLengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:backgroundTint="@color/primary"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="0dp"
                android:hint="Alamat Lengkap Penerima"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_city">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="4"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circle_shape"
            android:text="Save"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circle_shape"
            android:text="Update"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>